# onibi

./: .editorconfig  .gitignore  .goreleaser.yaml  .swiftlint.yml  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DOC.md  LICENSE  Makefile  PHASE-00-PLAN-27-MAY.md  PHASE-01-PLAN-27-MAY.md  PHASE-02-PLAN-27-MAY.md  PHASE-03-PLAN-27-MAY.md  PHASE-04-PLAN-27-MAY.md  PHASE-05-PLAN-27-MAY.md  PHASE-06-PLAN-27-MAY.md  PHASE-07-PLAN-27-MAY.md  PROMPTS-27-MAY.md  Package.swift  README.md  SECURITY.md  SHOWCASE.md  SPEC.md  THREAT-MODEL.md  TO-AUDIT.md  TO-IMPLEMENT-PIVOT-4-JUN.md  TODO-10-JUN.md  TODO.md  TODO_30MARCH.md  WORKON-PIVOT-ASAP.md  ghostty-macos-menubar_todo.txt  go.mod  go.sum  onibi-notify  pnpm-lock.yaml  project.yml  todo.md  (+1 more)
.github/: pull_request_template.md
GhosttyMenubar/: ContentView.swift  GhosttyMenubarApp.swift  Info.plist
GhosttyMenubarTests/: EventDetectorTests.swift  FilterRuleTests.swift  LRUCacheTests.swift  LogFileParserTests.swift
Onibi/: ContentView.swift  Info.plist  OnibiApp.swift
OnibiCoreTests/: AssistantClassifierTests.swift  AuthFailureTrackerTests.swift  CommandLifecycleTrackerTests.swift  DiagnosticsEndpointIntegrationTests.swift  MobileGatewayRouterTests.swift  MobileMonitorViewModelTests.swift  RealtimeGatewayCodecTests.swift
OnibiPhone/: ConnectionSetupView.swift  OnibiPhoneApp.swift  PhoneDashboardView.swift  PhoneDesignSystem.swift  PhoneRootView.swift  PhoneSessionsView.swift
OnibiPhoneTests/: OnibiPhoneSmokeTests.swift
OnibiSessionProxy/: RemoteInputByteTranslator.swift  SessionProxyRuntime.swift  TerminalCommandLifecycleParser.swift  TerminalEventParser.swift  TerminalTitleParser.swift  main.swift
OnibiSessionProxyTests/: RemoteInputByteTranslatorTests.swift  SessionProxyLaunchConfigurationTests.swift  TerminalCommandLifecycleParserTests.swift  TerminalEventParserTests.swift  TerminalTitleParserTests.swift
OnibiTests/: BackgroundTaskSchedulerTests.swift  ControllableSessionRegistryTests.swift  DependencyContainerTests.swift  DiagnosticsBundleTests.swift  ErrorReporterTests.swift  EventDetectorTests.swift  FalsePositiveReducerTests.swift  FilterRuleTests.swift  GatewayReachabilityProbeTests.swift  GatewayRequestJournalTests.swift  GhosttyCliServiceTests.swift  GhosttyConfigParserTests.swift  GhosttyIPCClientTests.swift  JSONStorageManagerTests.swift  LRUCacheTests.swift  LogFileParserTests.swift  LogFileTruncatorTests.swift  NetworkInterfaceScannerTests.swift  NotificationManagerTests.swift  PerformanceMonitorTests.swift  PipelineIntegrationTests.swift  ProxyRealtimeIntegrationTests.swift  RealtimeGatewayServiceTests.swift  SessionManagerTests.swift  SessionOutputBufferTests.swift  ShellHookInstallerTests.swift  TokenAgeCalculatorTests.swift  UpdaterControllerTests.swift  WebAssetServerTests.swift
OnibiWeb/: index.html  package-lock.json  package.json  vite.config.ts
adapters/: README.md
app/: package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: checkpointing.rs  config.rs  git.rs  headless.rs  lib.rs  main.rs  orchestration.rs  policy.rs  remote.rs  review.rs  self_update.rs
app/src-tauri/src/adapters/: acp.rs  aider.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  goose.rs  hermes.rs  mod.rs  omp.rs  opencode.rs  pi.rs  qoder.rs
app/src-tauri/src/approval/: pending.rs  store.rs
app/src-tauri/src/cli/: doctor.rs  mod.rs  setup.rs  status.rs
app/src-tauri/src/fs/: mod.rs
app/src-tauri/src/orchestration/: decider.rs  invariants.rs  projector.rs
app/src-tauri/src/protocol/: mod.rs
app/src-tauri/src/pty/: manager.rs  mod.rs  notifications.rs  session.rs
app/src-tauri/src/push/: mod.rs
app/src-tauri/src/secret/: mod.rs
app/src-tauri/src/server/: auth.rs  mod.rs  pairing.rs  routes.rs  ws_hub.rs
app/src-tauri/src/transport/: cloudflared.rs  lan.rs  manager.rs  mod.rs
app/src-tauri/src/util/: bin.rs
docs/: SPEC-adapters.html  SPEC-adapters.md  SPEC-e2e.html  SPEC-e2e.md  SPEC-multi-owner.md  SPEC-providers.md  SPEC-workspace.md  adapter-contract.html  adapter-contract.md  adapters-registry.html  adapters-registry.md  adapters.md  anomaly-detection.md  apns-setup.md  architecture.html  architecture.md  branding.html  branding.md  budgets.md  cloudflare-quick-setup.html  cloudflare-quick-setup.md  demo.cast  (+77 more)
(+1233 files in other folders)
