[package]
name = "onibi"
version = "1.5.0-dev"
description = "Desktop cockpit for local AI coding agents, with mobile second-screen"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"
bytes = "1"
base64 = "0.22"
tokio = { version = "=1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
ulid = { version = "1", features = ["serde"] }
directories = "5"
rand = "0.8"
keyring = "3"
clap = { version = "4", features = ["derive"] }
qrcodegen = "1.8"
png = "0.17"
async-trait = "0.1"
which = "6"
regex = "1"
rcgen = { version = "0.13", features = ["ring"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }
mdns-sd = "0.19"
if-addrs = "0.13"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
